fix z-index bug

--- a/src/components/DaysInStatus.css
+++ b/src/components/DaysInStatus.css
@@ -2,7 +2,7 @@
   position: absolute;
   bottom: 0px;
   right: 0px;
-  z-index: 1;
+  z-index: 0;
   display: flex;
   flex-direction: row;
   gap: 4px;
